# main_bd

./: pyproject.toml
project/: bd.py  config.py  database.ini  db_manager.py  main.py  navigation.py  scrapy_test.py  str_manager.py  testt.py  utils.py
