[tool.poetry]
name = "main-bd"
version = "0.1.0"
description = ""
authors = ["slivapyt <faer2325@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tree = "^0.2.4"
requests = "^2.31.0"
configparser = "^7.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
